--- a/Views/Usuario/HomeNutri.cshtml
+++ b/Views/Usuario/HomeNutri.cshtml
@@ -2508,7 +2508,7 @@
 
             dias.forEach(dia => {
                 const dieta = {
-                    Dia: dia, // ✅ adicionando o dia
+                    Dia: dia,
                     Cafe: [],
                     Almoco: [],
                     CafeDT: [],
